# imp

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  grammar.js  package.json  pyproject.toml  tree-sitter.json
amp/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
amp/bindings/c/: tree-sitter-amp.pc.in
amp/bindings/c/tree_sitter/: tree-sitter-amp.h
amp/bindings/go/: binding.go  binding_test.go
amp/bindings/node/: binding.cc  index.d.ts  index.js
amp/bindings/python/tests/: test_binding.py
amp/bindings/python/tree_sitter_amp/: __init__.py  binding.c
amp/bindings/rust/: build.rs  lib.rs
amp/bindings/swift/TreeSitterAmpTests/: TreeSitterAmpTests.swift
bindings/go/: binding_test.go
bindings/node/: index.d.ts
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_imp/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterImpTests/: TreeSitterImpTests.swift
bsp/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bsp/bindings/c/: tree-sitter-bsp.pc.in
bsp/bindings/go/: binding.go  binding_test.go
bsp/bindings/node/: binding.cc  index.d.ts  index.js
bsp/bindings/python/tests/: test_binding.py
bsp/bindings/python/tree_sitter_bsp/: __init__.py  binding.c
bsp/bindings/rust/: build.rs  lib.rs
bsp/bindings/swift/TreeSitterBsp/: bsp.h
bsp/bindings/swift/TreeSitterBspTests/: TreeSitterBspTests.swift
