[package]
name = "tree-sitter-imp"
description = "The Immortal Model Parser. Designed to parse the Archeotech (*.act) markup language, and the Bane (*.bane) Scripting Language"
version = "0.1.0"
authors = ["KLSumEd <kaisumed@gmail.com>"]
license = "GPL 2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "imp"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/klsumed/imp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
