[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-imp"
description = "The Immortal Model Parser. Designed to parse the Archeotech (*.act) markup language, and the Bane (*.bane) Scripting Language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "imp"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "KLSumEd", email = "kaisumed@gmail.com" }]
requires-python = ">=3.10"
license.text = "GPL 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/klsumed/imp"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
