[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bsp"
description = "The Bane Script Parser. Designed to parse the Bane (*.bane) Scripting Language."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "bsp"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Kai Sumner-Edwards", email = "kaisumed@gmail.com" }]
requires-python = ">=3.10"
license.text = "GPL 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/klsumed/imp"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
